--- a/html/Css/style.css
+++ b/html/Css/style.css
@@ -1,3 +1,36 @@
+* {
+  box-sizing: border-box;
+}
+
+.toolbar {
+  text-align: center;
+  width:100%;
+  text-transform: uppercase;
+  padding: 16px;
+  background-color: rgb(85, 164, 191);
+  color: #fff;
+  border-bottom: 4px solid #444449;
+  
+}
+
+#toolbar{
+  
+  display:flex;
+  justify-content: end;
+  text-align: end;
+}
+
+.home,.about{
+  list-style: none;
+  display:inline;
+  padding-right: 32px;
+  
+}
+
+#home, #about{
+  text-decoration: none;
+}
+
 div h1{
     text-align:center;
     width:auto;
@@ -5,7 +38,48 @@ div h1{
     
   }
 
+h1{
+  padding-inline-start: 100px;
+  font-size: 60px;
+}
+
+h2{
+  padding-inline-start: 100px;
+}
+h3{
+  text-align:center;
+}
+
   .circle{
     justify-content: center;
   }
   
+body{
+  background-image:url(https://images.hdqwalls.com/download/abstract-blue-texture-4k-cl-1080x1920.jpg);
+  background-size:cover;
+  background-repeat:no-repeat;
+  background-attachment:fixed;
+  margin: 0;
+  font-family: sans-serif;
+  
+  
+}
+
+.templates{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin:0 auto;
+  padding: 20px 10px;
+  gap: 16px;
+  
+
+  
+}
+
+#temp1, #temp2{
+  width: 300px;
+  height: 500px;
+}
