--- a/html/Css/style.css
+++ b/html/Css/style.css
@@ -32,11 +32,14 @@
 }
 
 div h1{
-    text-align:center;
-    width:auto;
-    font-size: 100px;
+  text-align:center;
+  width:auto;
+  font-size: 100px;
     
-  }
+}
+header h1 p{
+  margin: 0%;
+}
 
 h1{
   padding-inline-start: 100px;
