--- a/html/Css/page1.css
+++ b/html/Css/page1.css
@@ -3,24 +3,21 @@ form {
 
 }
 
-.form-container {
-    display: inline-block;
-    text-align: left;
+.form-container{
+    margin:0 auto;
+    text-align: center;
+    width: 300px;
 }
-
-.form-field {
-    margin: 10px;
-}
-
-.inline-fields{
-    display:inline-block;
-    text-align: left;
-}    
+.form-container.input,.form-container.label{
+    display: block;
+    margin:10px auto;
+} 
 input[type="text"],
 input[type="tel"],
 input[type="email"] {
     width:200px; /* Make all input boxes take up 100% of the available width within their container */
 }
+
 .field-gap {
     margin-right: 20px;
     margin-bottom: 20px;
