--- a/html/Css/login.css
+++ b/html/Css/login.css
@@ -1,29 +1,56 @@
-.login-box{
-    margin: 250px 550px;
-    margin-top: 0;
-    width: fit-content;
-    /* background-color: antiquewhite; */
-    background-color: rgba(255, 192, 203, 0.456);
-    border-radius: 20px;
-    height: 250px;
-
-}
-
-.input-box{
-    display:inline-block;
-    margin: 50px;  
-}
-.input{
-    margin-top: 40px;
-    margin: 10px;
-    margin-left: 70px;
-}
-#logo{
-    border-radius: 50%;
-}
-.image{
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
     display: flex;
-    align-items: center;
     justify-content: center;
-    margin-top: 10%;
+    align-items: center;
+    height: 100vh;
+}
+
+.login-container {
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.log{
+    width:auto;
+}
+
+.login-container h2 {
+    text-align: center;
+}
+
+.form-group {
+    margin-bottom: 20px;
+    padding-right:20px;
+}
+
+label {
+    font-weight: bold;
+    display: block;
+    margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.btn {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #0056b3;
 }
