--- a/html/Css/login.css
+++ b/html/Css/login.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-image:url("https://img.freepik.com/free-vector/realistic-neon-lights-background_23-2148907367.jpg?w=900&t=st=1695146972~exp=1695147572~hmac=ceda969dcfecb5282f0e3d51955fd4f9cdd8e9d48831e00656b0054d6a2246ab");
+    background-image:url("download.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -13,7 +13,7 @@ body {
 }
 
 .login-container {
-    background-color: #ffffff;
+    background-color: #a978d1;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
@@ -42,7 +42,7 @@ input[type="text"],
 input[type="password"] {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #ee82ee;
     border-radius: 5px;
 }
 
