updated signup css button

--- a/html/signup.css
+++ b/html/signup.css
@@ -66,7 +66,7 @@ label{
 
 .signup-button {
     background-color: #00335d;
-    color: #0f0f;
+    color: white;
     border: none;
     padding: 10px 20px;
     border-radius: 4px;
