--- a/html/Feedback.css
+++ b/html/Feedback.css
@@ -1,3 +1,10 @@
+html {
+	margin: 0;
+	font-family: 'Muli', sans-serif;
+	
+	text-rendering: optimizeLegibility;
+}
+
 header {
     text-align: center;
 }
@@ -6,6 +13,54 @@ div {
     width: fit-content;
     text-align: center;
     margin: 2vh auto;
+}
+
+body {	
+	background: linear-gradient(to bottom, #B721FF, #2AF598, #fec051, #FEE140, #FA709A );
+	background-size: 100%;
+	background-repeat: repeat;
+}
+
+body:before{
+	content:'';
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	width: 100%;
+	z-index: -1;
+	background: linear-gradient(to right bottom, rgba(255,255,255,0.2), #21D4FD 75%);
+}
+
+body {
+	margin: 0;
+	font-size: 1.15rem;
+	line-height: 1.4em;
+}
+
+#container {
+	background-color: #FFF;
+	margin: 80px 10%;
+	padding: 30px 60px;
+	border-radius: 20px;
+	box-shadow: 0 3px 26px 0 rgba(0,0,0,0.20);
+}
+
+main,header {
+	box-sizing: border-box;
+}
+
+main {
+	background-color: #fee;
+	padding: 20px;
+	border-radius: 10px;
+	margin: 40px 0;
+}
+
+header{
+    background-color: #fef;
+    padding:20px;
+    border-radius: 10px;
+    margin:40px 0;
 }
 
 table {
