--- a/html/Css/style.css
+++ b/html/Css/style.css
@@ -1,12 +1,85 @@
 * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
+  margin:0;
+  padding:0
 }
 
-.toolbar {
+
+ul{
+  position:absolute;
+  top:10%;
+  left: 85%;
+  transform: translate(-50%,-50%);
+  display:flex;
+}
+
+ul li{
+  list-style: none;
+}
+
+ul li a{
+  position: relative;
+  display: block;
+  text-transform: uppercase;
+  margin: 20px 0;
+  padding: 10px 20px;
+  text-decoration: none;
+  color:#fde907;
+  font-family: sans-serif;
+  font-size: 18px;
+  font-weight: 600;
+  transition: 0.5s;
+  z-index:1;
+}
+
+ul li a:before{
+  content: '';
+  position: absolute;
+  top:0; left:0;
+  width:100%; height: 100%;
+  border-top: 2px solid #fde907;
+  border-bottom: 2px solid #fde907;
+  transform:scaleY(2);
+  opacity:0;
+  transition:0.3s;
+}
+
+ul li a:after{
+  content: '';
+  position: absolute;
+  top:2px; left:0;
+  width:100%; height: 100%;
+  border-top: 2px solid #fde907;
+  border-bottom: 2px solid #fde907;
+  transform:scaleY(0);
+  opacity:0;
+  transition:0.3s;
+  z-index:-1;
+
+}
+
+ul li a:hover{
+  color:#012822;
+  background-color: rgb(105,164,191)
+}
+
+ul li a:hover:before{
+  transform:scaleY(1);
+  opacity:1;
+}
+
+ul li a:hover:after{
+  transform:scaleY(1);
+  opacity:1;
+}
+
+.toolbar-content {
   text-align: center;
   width:100%;
   text-transform: uppercase;
-  padding: 16px;
+  padding: 36px;
   background-color: rgb(85, 164, 191);
   color: #fff;
   border-bottom: 4px solid #444449;
@@ -19,19 +92,6 @@
   justify-content: end;
   text-align: end;
 }
-
-.home,.about,.login{
-  list-style: none;
-  display:inline;
-  padding-right: 32px;
-  border:none;
-  background-color: rgb(85,164,191);
-}
-
-.home:hover,.about:hover,.login:hover{
-  color:#ffff0d
-}
-
 
 div h1{
   text-align:center;
