--- a/html/Css/index.css
+++ b/html/Css/index.css
@@ -6,6 +6,7 @@
   align-items: center;
   background-color: #cccccc88;
   
+  
 }
 
 .logo {
@@ -18,7 +19,8 @@
   border-radius: 50%;
   display: inline-block;
   margin-right: 10px;
-
+  
+  
 }
 
 
@@ -31,12 +33,16 @@
   display: flex;
   align-items: center;
   right: 0;
+ 
+  
 }
 
 .nav li {
   margin-right: 20px;
   padding: 5px;
   text-decoration: none;
+ 
+  
 }
 
 ul li a {
@@ -180,3 +186,34 @@ body{
   width: 300px;
   height: 500px;
 }
+
+.text{
+  
+  background-color: rgb(163, 201, 226);
+  padding-bottom: 300px;
+  padding-left: 80px; 
+  padding-top:100px
+ 
+
+}
+#text1{
+  font-size:20px;
+  margin-top: 20px;
+}
+#text2{
+  font-size:60px;
+}
+#rounded-button {
+  border: 2px solid black; /* Sets the black border */
+  border-radius: 10px; /* Rounds the corners (adjust as needed) */
+  background-color: black; /* Makes the background transparent */
+  color: white; /* Sets the text color to black */
+  padding: 10px 20px; /* Adjust padding for the button size */
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 10px;
+  cursor: pointer;
+}
+
