--- a/html/Css/index.css
+++ b/html/Css/index.css
@@ -109,20 +109,13 @@ ul li a:hover:after {
 h3{
   text-align:center;
 }
-
-
-
   
-body{
-  
+body{  
   margin: 0;
-  font-family: sans-serif;
-  
-  
+  font-family: sans-serif; 
 }
 
 .op{
-  
   color: #BFD402;
   height:200px;
   text-align:center;
@@ -188,13 +181,33 @@ body{
 }
 
 .text{
-  
+  float:left;
+  width:50%;
+  box-sizing: border-box;
   background-color: rgb(163, 201, 226);
-  padding-bottom: 300px;
+  padding-bottom: 100px;
   padding-left: 80px; 
   padding-top:100px
  
 
+}
+
+.picture-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); 
+  gap: 10px; 
+  padding-bottom: 276px;
+}
+
+.picture {
+  width: 100%;
+  max-width: 100%; 
+}
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
 }
 #text1{
   font-size:20px;
@@ -203,12 +216,13 @@ body{
 #text2{
   font-size:60px;
 }
-#rounded-button {
-  border: 2px solid black; /* Sets the black border */
-  border-radius: 10px; /* Rounds the corners (adjust as needed) */
-  background-color: black; /* Makes the background transparent */
-  color: white; /* Sets the text color to black */
-  padding: 10px 20px; /* Adjust padding for the button size */
+
+.ho{
+  border: 2px solid black; 
+  border-radius: 10px; 
+  background-color: black; 
+  color: white; 
+  padding: 10px 20px; 
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -217,3 +231,8 @@ body{
   cursor: pointer;
 }
 
+.tt{
+  background-color: antiquewhite;
+  margin:0;
+  padding-top: 20px;
+}
