--- a/html/Css/index.css
+++ b/html/Css/index.css
@@ -156,7 +156,7 @@ body{
 
 
 .tt{
-  margin:50px
+  margin:50px 50px 0px 50px;
 }
 
 
@@ -181,10 +181,8 @@ body{
 }
 
 .text{
-  float:left;
-  width:50%;
+  background-image: url("Lamp.jpeg");
   box-sizing: border-box;
-  background-color: rgb(163, 201, 226);
   padding-bottom: 100px;
   padding-left: 80px; 
   padding-top:100px
@@ -194,6 +192,7 @@ body{
 
 .picture-grid {
   display: grid;
+  background-color:  rgb(163, 201, 226);
   grid-template-columns: repeat(2, 1fr); 
   gap: 10px; 
   padding-bottom: 276px;
@@ -206,6 +205,7 @@ body{
 
 .clearfix::after {
   content: "";
+  background-color:  rgb(163, 201, 226);
   display: table;
   clear: both;
 }
@@ -235,4 +235,17 @@ body{
   background-color: antiquewhite;
   margin:0;
   padding-top: 20px;
+}
+footer{
+  background-color:#0a0a23;
+  color: white;
+}
+.center{
+  text-align: center;
+  margin: 0;
+  padding: 20px;
+}
+.center a{
+  text-decoration: none;
+  color: orange;
 }
