--- a/html/Contact_us2.css
+++ b/html/Contact_us2.css
@@ -26,7 +26,7 @@ body::after {
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 section {
@@ -60,7 +60,7 @@ section {
   color: #FFF;
 }
 
-.row  {
+.row {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -126,7 +126,7 @@ section {
 }
 
 .contact-form .input-box input,
-.contact-form .input-box textarea{
+.contact-form .input-box textarea {
   width: 100%;
   padding: 5px 0;
   font-size: 16px;
@@ -148,15 +148,14 @@ section {
   color: #666;
 }
 
-.contact-form .input-box input:focus ~ span,
-.contact-form .input-box textarea:focus ~ span{
+.contact-form .input-box input:focus~span,
+.contact-form .input-box textarea:focus~span {
   color: #e91e63;
   font-size: 12px;
   transform: translateY(-20px);
 }
 
-.contact-form .input-box input[type="submit"]
-{
+.contact-form .input-box input[type="submit"] {
   width: 100%;
   background: #00bcd4;
   color: #FFF;
@@ -168,8 +167,7 @@ section {
   transition: 0.5s;
 }
 
-.contact-form .input-box input[type="submit"]:hover
-{
+.contact-form .input-box input[type="submit"]:hover {
   background: #FFF;
   color: #00bcd4;
 }
@@ -179,16 +177,16 @@ section {
     padding-top: 50px;
     padding-bottom: 50px;
   }
-  
+
   .row {
     flex-direction: column;
   }
-  
+
   .contact-info {
     margin-bottom: 40px;
     width: 100%;
   }
-  
+
   .contact-form {
     width: 100%;
   }
