--- a/html/contactfinalcss.css
+++ b/html/contactfinalcss.css
@@ -17,7 +17,7 @@ body {
 .container {
     position: relative;
     width: 900px;
-    height: 550px;
+    height: 600px;
     
     overflow: hidden;
     border: 10px solid black ;
@@ -114,6 +114,7 @@ body {
 }
 
 .container form input[type="submit"] {
+    display:inline-block;
     border: 2px;
     outline: solid;
     padding: 9px 25px;
@@ -126,7 +127,20 @@ body {
     width: 150px;
     margin-top: 10px;
 }
-
+.container form input[type="button"] {
+    display:inline-block;
+    border: 2px;
+    outline: solid;
+    padding: 9px 25px;
+    background: #685aff;
+    color:white;
+    cursor: pointer;
+    font-size: 0.9em;
+    border-radius: 4px;
+    font-weight: 600;
+    width: 150px;
+    margin-top: 10px;
+}
 .container form input[type="submit"]:active {
     opacity: 0.8;
 }
