--- a/html/slider.css
+++ b/html/slider.css
@@ -8,7 +8,49 @@ body{
     background: #eaeaea;
     overflow: hidden;
 }
-
+.header{
+    position:fixed;
+    top:0;
+    left:100px;
+    width: 100%;
+    padding:20px 10%;
+    background: transparent;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+}
+.logo{
+    position: relative;
+    font-size: 25px;
+    color:white;
+    text-decoration: none;
+    font-weight: 600;
+}
+.logo::before{
+    content:'';
+    position: absolute;
+    top:0;
+    right:0;
+    width:100%;
+    height:100%;
+    background:#081b29;
+    animation:showRight 1s ease forwards;
+    animation-delay: .8s;
+    
+}
+.navbar a{
+    font-size: 18px;
+    color:white;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 40px;
+    transition: 3s;
+}
+.navbar a:hover,
+.navbar a.active{
+    color:#00abf0;
+}
 .container{
     position: absolute;
     top: 50%;
