--- a/html/slider.css
+++ b/html/slider.css
@@ -1,68 +1,81 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
-    background: #eaeaea;
+body {
+    background-image: url('https://images.pexels.com/photos/2387793/pexels-photo-2387793.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
     overflow: hidden;
+
 }
-.header{
-    position:fixed;
-    top:0;
-    left:100px;
+
+.header {
+    position: fixed;
+    top: 0;
+    /* left: 100px; */
     width: 100%;
-    padding:20px 10%;
+    padding: 20px 5%;
     background: transparent;
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 100;
+
 }
-.logo{
+
+.logo {
     position: relative;
     font-size: 25px;
-    color:white;
+    color: white;
     text-decoration: none;
     font-weight: 600;
 }
-.logo::before{
-    content:'';
+
+.logo::before {
+    content: '';
     position: absolute;
-    top:0;
-    right:0;
-    width:100%;
-    height:100%;
-    background:#081b29;
-    animation:showRight 1s ease forwards;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    /* background:#fff; */
+    animation: showRight 1s ease forwards;
     animation-delay: .8s;
-    
+
 }
-.navbar a{
+
+.navbar a {
     font-size: 18px;
-    color:white;
+    color: white;
     text-decoration: none;
     font-weight: 500;
     margin-left: 40px;
-    transition: 3s;
+    transition: 1s;
 }
+
 .navbar a:hover,
-.navbar a.active{
-    color:#00abf0;
+.navbar a.active {
+    color: #00abf0;
 }
-.container{
-    position: absolute;
+
+.container {
+    position: relative;
     top: 50%;
     left: 60%;
     transform: translate(-50%, -50%);
     width: 400px;
     height: 600px;
-    background: #f5f5f5;
-    box-shadow: 0 30px 50px #dbdbdb;
+    background: transparent;
+    box-shadow: 0 30px 50px #dbdbdb33;
 }
 
-.container .slide .item{
+
+.container .slide .item {
     width: 160px;
     height: 250px;
     position: absolute;
@@ -77,40 +90,43 @@ body{
 }
 
 .slide .item:nth-child(1),
-.slide .item:nth-child(2){
-    position:absolute;
-    top: 0;
+.slide .item:nth-child(2) {
+    position: absolute;
+    top: 9vh;
     left: 0;
     transform: translate(0, 0);
-    border-radius: 0;
+    border-radius: 10px;
     width: 100%;
     height: 100%;
+    padding-bottom: 2vh;
 }
 
 
-.slide .item:nth-child(3){
+.slide .item:nth-child(3) {
     left: 50%;
 }
-.slide .item:nth-child(4){
+
+.slide .item:nth-child(4) {
     left: calc(50% + 220px);
 }
-.slide .item:nth-child(5){
+
+.slide .item:nth-child(5) {
     left: calc(50% + 440px);
 }
 
 /* here n = 0, 1, 2, 3,... */
-.slide .item:nth-child(n + 6){
+.slide .item:nth-child(n + 6) {
     left: calc(50% + 660px);
     opacity: 0;
 }
 
 
 
-.item .content{
+.item .content {
     position: absolute;
     top: 50%;
     left: 100px;
-    width: 300px;
+    /* width: 300px; */
     text-align: left;
     color: #eee;
     transform: translate(0, -50%);
@@ -119,13 +135,13 @@ body{
 }
 
 
-.slide .item:nth-child(2) .content{
+.slide .item:nth-child(2) .content {
     display: block;
 }
 
 
-.content .name{
-    margin-left: -800px;
+.content .name {
+    margin-left: -50vw;
     margin-top: 200px;
     font-size: 40px;
     text-transform: uppercase;
@@ -134,16 +150,16 @@ body{
     animation: animate 1s ease-in-out 0s 1 forwards;
 }
 
-.content .des{
-    
+.content .des {
+
     margin-bottom: 20px;
-    margin-left: -800px;
+    margin-left: -50vw;
     opacity: 0;
     animation: animate 1s ease-in-out 0s 1 forwards;
 }
 
-.content button{
-    margin-left: -800px;
+.content button {
+    margin-left: -50vw;
     padding: 10px 20px;
     border: none;
     cursor: pointer;
@@ -153,18 +169,14 @@ body{
 
 
 @keyframes animate {
-    from{
+    from {
         opacity: 0;
         transform: translate(0, 100px);
         filter: blur(33px);
     }
 
-    to{
+    to {
         opacity: 1;
         transform: translate(0);
         filter: blur(0);
     }
-}
-
-
-
