--- a/html/slider.css
+++ b/html/slider.css
@@ -97,7 +97,7 @@ body {
     transform: translate(0, 0);
     border-radius: 10px;
     width: 100%;
-    height: 100%;
+    height: 540px;
     padding-bottom: 2vh;
 }
 
