--- a/html/slider.css
+++ b/html/slider.css
@@ -31,23 +31,64 @@ body {
 .logo {
     position: relative;
     font-size: 25px;
-    color: white;
+    color: rgb(246, 245, 245);
     text-decoration: none;
     font-weight: 600;
 }
 
-.logo::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    /* background:#fff; */
-    animation: showRight 1s ease forwards;
-    animation-delay: .8s;
+.logo {
+    cursor: pointer;
+    position: relative;
+    padding: 10px 20px;
+    background: rgb(34, 34, 34);
+    font-size: 28px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    transition: all 1s;
+  
+    &:after,
+    &:before {
+      content: " ";
+      width: 10px;
+      height: 10px;
+      position: absolute;
+      border: 0px solid #2d2c2c;
+      transition: all 1s;
+    }
+  
+    &:after {
+      top: -1px;
+      left: -1px;
+      border-top: 5px solid rgb(255, 255, 255);
+      border-left: 5px solid rgb(255, 254, 254);
+    }
+  
+    &:before {
+      bottom: -1px;
+      right: -1px;
+      border-bottom: 5px solid rgb(255, 255, 255);
+      border-right: 5px solid rgb(255, 255, 255);
+    }
+  
+    &:hover {
+      border-top-right-radius: 0px;
+      border-bottom-left-radius: 0px;
+  
+      &:before,
+      &:after {
+        width: 100%;
+        height: 100%;
+        border-color: rgb(255, 255, 255);
+      }
+    }
+  }
 
-}
+  
+ 
+    
+    
+    
+
 
 .navbar a {
     font-size: 18px;
@@ -166,12 +207,17 @@ body {
     opacity: 0;
     animation: animate 1s ease-in-out 0s 1 forwards;
 }
+.content button:hover{
+    background-color: rgb(28, 28, 28);
+    color:white;
+    transition:1s;
+}
 
 
 @keyframes animate {
     from {
         opacity: 0;
-        transform: translate(0, 100px);
+        transform: translate(0,10px);
         filter: blur(33px);
     }
 
@@ -180,3 +226,4 @@ body {
         transform: translate(0);
         filter: blur(0);
     }
+}
