--- a/html/slider.css
+++ b/html/slider.css
@@ -40,7 +40,7 @@ body {
     cursor: pointer;
     position: relative;
     padding: 10px 20px;
-    background: rgb(34, 34, 34);
+    background: transparent;
     font-size: 28px;
     border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
