--- a/html/loginfinalcss.css
+++ b/html/loginfinalcss.css
@@ -180,6 +180,18 @@ body {
     width: 100px;
     margin-top: 10px;
 }
+button{
+    border: none;
+    outline: none;
+    padding: 9px 25px;
+    background: #fff;
+    cursor: pointer;
+    font-size: 0.9em;
+    border-radius: 4px;
+    font-weight: 600;
+    width: 100px;
+    margin-top: 10px;
+}
 
 .box form input[type="submit"]:active {
     opacity: 0.8;
