--- a/html/contact.css
+++ b/html/contact.css
@@ -52,7 +52,7 @@ figure{
 }
 .form ul li input{
     border: none;
-    border-bottom: 2px solid #333; /* Set the color of the bottom border */
+    border-bottom: 2px solid #333; 
     outline: none;
     background-color: transparent;
     
