--- a/html/contactfinalcss.css
+++ b/html/contactfinalcss.css
@@ -55,7 +55,7 @@ body {
     color: #000;
     font-size: 1em;
     letter-spacing: 0.05em;
-    border-bottom: 2px solid #000; /* Add this line for underline effect */
+    border-bottom: 2px solid #000; 
     
 }
 
@@ -85,7 +85,7 @@ body {
     width: 100%;
     height: 2px;
     background: #000;
-    transform: scaleX(0); /* Initially hidden */
+    transform: scaleX(0); 
     transform-origin: right;
     transition: transform 0.5s;
 }
