--- a/html/signup.css
+++ b/html/signup.css
@@ -110,7 +110,7 @@ body {
     color: #fff;
     font-size: 1em;
     letter-spacing: 0.05em;
-    border-bottom: 2px solid #fff; /* Add this line for underline effect */
+    border-bottom: 2px solid #fff; 
     transition: border-bottom 0.5s;
 }
 
@@ -140,7 +140,7 @@ body {
     width: 100%;
     height: 2px;
     background: #fff;
-    transform: scaleX(0); /* Initially hidden */
+    transform: scaleX(0); 
     transform-origin: right;
     transition: transform 0.5s;
 }
